--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,6 +1,6 @@
 <header class="hero">
         <div class="textos-hero">
-            <h1>Chat Anonimo</h1>
+            <span class="Antara"><h1>Antara chat </h1><i class='bx bxs-message-rounded-dots'></i></span>
             <p>La red de chat para contactar personas</p>
             <a href="#registro">Resgistrate</a>
         </div>
