--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,4 +1,4 @@
-<div class="container registro">
+<div class="container_registro">
         <div class="header">
             <h2>Crear cuenta</h2>
         </div>
@@ -27,9 +27,7 @@
                 <small>Error </small>
             </div>
             <button type="submit">Enviar</button>
-            
-           
         </form>
 </div>
-      <!--toastify JS-->
-      <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <!--toastify JS-->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
