--- a/public/scss/login/login.scss
+++ b/public/scss/login/login.scss
@@ -1,4 +1,4 @@
-body, html {
+/* body, html {
     height: 100%;
     font-family: Poppins-Regular,sans-serif;
 }
@@ -32,7 +32,7 @@ html {
     
     -webkit-tap-highlight-color: transparent;
 }
-
+ */
 
 .limiter {
     width: 100%;
@@ -42,10 +42,6 @@ html {
 .container-login100 {
     width: 100%;
     min-height: 100vh;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -84,7 +80,8 @@ html {
 
 .login100-form-title {
     display: block;
-    font-family: Poppins-Bold;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 800;
     font-size: 39px;
     color: #333;
     line-height: 1.2;
@@ -225,10 +222,7 @@ a {
     height: 100%;
 
     /*background: #a64bf4;*/
-    background: -webkit-linear-gradient(right,#00dbde,#fc00ff,#00dbde,#fc00ff);
-    background: -o-linear-gradient(right,#00dbde,#fc00ff,#00dbde,#fc00ff);
-    background: -moz-linear-gradient(right,#00dbde,#fc00ff,#00dbde,#fc00ff);
-    background: linear-gradient(right,#00dbde,#fc00ff,#00dbde,#fc00ff);
+    background-image: linear-gradient(120deg, #ffb009 0%, #7c4cc3 70%), url("../img/header.jpg");
     top: 0%;
     left: -100%;
     -webkit-transition: all .4s;
