--- a/public/scss/mensajeria/chat.scss
+++ b/public/scss/mensajeria/chat.scss
@@ -37,10 +37,15 @@
     font-weight: 800;
     margin-left: 5px;
     letter-spacing: 1px;
+    font-size: 3.5rem //sin nada en mi ver
 }
 
     .titulo_nav{
         display: flex;
+
+        i{
+            font-size: 1.5rem;
+        }
     }
 
     .parte_der_nav{
@@ -53,11 +58,13 @@
             
             h6{
                 padding-left: 5px;
-                font-size: 1.2rem;
+                font-size: 1.4rem;
             }
         }
     }
 }
+
+
 
 .user{
     background-color: #1a181d;
@@ -65,7 +72,8 @@
     display: flex;
     flex-direction: column;
     min-height: 100%;
-    width: 28%;
+/*     width: 28%; arreglar para mi pantalla después*/
+    width: 18%;
 
     .desplegable{
         display: flex;
@@ -88,14 +96,22 @@
         }
 
         .chat_privado{
+            display: flex;
+            align-items: baseline;
+
             .status_canal{
-                
+                background-color: rgb(69, 173, 43);
+                border-radius: 50%;
+                width: 0.6rem;
+                height: 0.6rem;
+                margin-left: 0.7rem;
             }
         }
 
         h6{
             padding-left: 5px;
             text-align: center;
+            font-size: 1.4rem; //en mi pantalla no aplica el font-size
         }
 
         i h6{
@@ -103,7 +119,9 @@
         }
 
         h8{
+            margin-left: 0.5rem;
             padding: 0.3rem 0.5rem;
+            font-size: 1.1rem; //lo mismo de arriba^
         }
 
         .canal:hover{
@@ -127,20 +145,25 @@
         .contenedor_img{
             position: relative;
 
-            .user_pfp{
+            .user_pfp_img{
             border-radius: 50%;
-            width: 5rem;
-            height: 5rem;
+/*             width: 5rem;
+            height: 5rem; para mi pantalla (Luna) */
+            width: 7rem;
+            height: 7rem;
             object-fit: cover;
-            margin-bottom: 5px;
+/*             margin-bottom: 5px; */
+            margin-bottom: 10px;
         }
 
-        .status{
+        .status-on{
             background-color: rgb(69, 173, 43);
-            border: 2px solid #1a181d;
+            border: 3px solid #1a181d;
             border-radius: 50%;
-            width: 1.2rem;
-            height: 1.2rem;
+/*             width: 1.2rem;
+            height: 1.2rem; */
+            width: 2rem;
+            height: 2rem;
             position: absolute;
             right: 1px;
         }
@@ -152,6 +175,10 @@
 
 
 .chat-area{
+    
+/*     .p-3{
+        display: flex;
+    } */
 
     .canal_name{
         display: flex;
@@ -285,7 +312,7 @@
     border-left: 1px solid rgba(61, 61, 61, 0.425);
     flex-direction: column;
     margin-top: 10px;
-    width: 18%;
+/*     width: 18%; */
     
     .users_online{
 
