--- a/public/scss/registro/registro.scss
+++ b/public/scss/registro/registro.scss
@@ -1,19 +1,18 @@
 @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,500&display=swap');
 
-* {
+/* * {
 	box-sizing: border-box;
 }
 
 body {
 	background-color: #fff;
 	font-family: 'Open Sans', sans-serif;
-	display: flex;
 	align-items: center;
 	justify-content: center;
 	min-height: 100vh;
 	margin: 0;
-}
+} */
 
 .container {
 	background-color: #fff;
