Cambios a las configuraciones del socket

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,7 +2,7 @@
         <div class="textos-hero">
             <span class="Antara"><h1>Antara chat </h1><i class='bx bxs-message-rounded-dots'></i></span>
             <p>La red de chat para contactar personas</p>
-            <a href="#registro">Resgistrate</a>
+            <a href="/register">Resgistrate</a>
         </div>
         <div class="svg-hero" style="height: 150px; overflow:hidden;">
         <svg viewox=" 0 0 500 150" preserveAspectRatio="none"style="height: 100%; width: 100%;">
