--- a/views/login.hbs
+++ b/views/login.hbs
@@ -53,3 +53,8 @@
             </div>
         </div>
     </div>
+
+    <!--toastify JS-->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <!--doc js-->
+    <script src="../firebase/login.js" type="module"></script>
