--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,8 +1,8 @@
-<div class="container_registro">
+<div class="container registro">
         <div class="header">
             <h2>Crear cuenta</h2>
         </div>
-        <form id="formuser" class="form">
+        <form id="form-register" class="form">
             <div class="form-control">
                 <label for="username">Usuario</label>
                 <input type="text" placeholder="Nombre de Usuario" id="username" />
