--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,7 +1,7 @@
 <div class="limites">
         <div class="container-login100">
             <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
-                <form class="login100-form validate-form" id="formuser2">
+                <form class="login100-form validate-form" id="form-login">
                 <span class="login100-form-title p-b-49">LOGIN</span>
                 <div class="wrap-input100 validate-input m-b-23" data-validate="Nombre de Usuario">
                     <span class="label-input100">Usuario</span>
