--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -79,3 +79,5 @@
         </div>
     </div>
 </div>
+ <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/socket-client.js"></script>
