--- a/views/register.hbs
+++ b/views/register.hbs
@@ -31,3 +31,4 @@
 </div>
     <!--toastify JS-->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="../firebase/signup.js" type="module"></script>
