cambios en firebase

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -2,7 +2,7 @@
         <div class="header">
             <h2>Crear cuenta</h2>
         </div>
-        <form id="formuser" class="form">
+        <form id="form-register" class="form">
             <div class="form-control">
                 <label for="username">Usuario</label>
                 <input type="text" placeholder="Nombre de Usuario" id="username" />
@@ -30,4 +30,7 @@
         </form>
 </div>
     <!--toastify JS-->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
+    <script src="../firebase/signup.js" type="module"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
