--- a/views/login.hbs
+++ b/views/login.hbs
@@ -54,5 +54,5 @@
         </div>
     </div>
 
-    <script src="../firebase/singin.js" type="module"></script>
+    <script src="./firebase/singin.js" type="module"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
