--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -81,3 +81,4 @@
 </div>
  <script src="/socket.io/socket.io.js"></script>
     <script src="/js/socket-client.js"></script>
+     <script src="../firebase/login.js" type="module"></script>
