--- a/views/register.hbs
+++ b/views/register.hbs
@@ -31,6 +31,6 @@
 </div>
     <!--toastify JS-->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
+    <script src="./firebase/signup.js" type="module"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <script src="../firebase/signup.js" type="module"></script>
-      <script src="../firebase/login.js" type="module"></script>
