login de usuario mediante redes sociales

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -31,7 +31,7 @@
                     <span>Registrate tambien por</span>
                 </div>
                <div class="flex-c-m">
-                <a href="#" class="login100-social-item bg1">
+                <a href="#" class="login100-social-item bg1 btn-info" id="facebook-firebase">
                     <i class="fa fa-facebook">
 
                     </i>
@@ -41,7 +41,7 @@
 
                     </i>
                 </a>
-                <a href="#" class="login100-social-item bg3">
+                <a href="#" class="login100-social-item bg3 btn-info" id="email-google">
                     <i class="fa fa-google">
 
                     </i>
@@ -56,3 +56,5 @@
 
     <script src="./firebase/singin.js" type="module"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="./firebase/emailFbLogin.js" type="module"></script>
+    <script src="./firebase/facebookfbLogin.js" type="module"></script>
