--- a/views/chat.hbs
+++ b/views/chat.hbs
@@ -8,6 +8,9 @@
             <div class="usuarios_nav"><i class='bx bxs-group'></i>
                 <h6>3</h6>
             </div>
+            <div class="cerrar_sesion">
+                <button>Cerrar sesión</button>
+            </div>
             <!--         <i class='bx bx-cog'></i> -->
         </div>
     </div>
