--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,16 +1,26 @@
 <header class="hero">
-        <div class="textos-hero">
-            <span class="Antara"><h1>Antara chat </h1><i class='bx bxs-message-rounded-dots'></i></span>
+    <nav>
+        <div class="nav_landing">
+            <div style="display:flex;">
+            <h1 class="antara_nav">Antara</h1>
+            <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+        <div class="acciones_nav">
+            <a href="/login" class="login_nav">Iniciar sesión</a>
+            <a href="/register" class="registro_nav">Registrarse</a>
+        </div>
+        </div>
+    </nav>
+    <div class="textos-hero">
+            <span class="Antara"><h1>Antara chat</h1><i class='bx bxs-message-rounded-dots'></i></span>
             <p>La red de chat para contactar personas</p>
-            <a href="/register">Resgistrate</a>
-        </div>
-        <div class="svg-hero" style="height: 150px; overflow:hidden;">
-        <svg viewox=" 0 0 500 150" preserveAspectRatio="none"style="height: 100%; width: 100%;">
-        <path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path>
-        </svg>
-        </div>
-        </header>
-        <section class="wave-contenedor website">
+            <a href="/register">Registrate</a>
+    </div>
+    <div class="imagengatito">
+        <img src="/img/kyaaa (2).png" alt="">
+    </div>
+</header>
+<section class="wave-contenedor website">
             <img src="img/primer.jpg" alt="">
         <div class="contenedor-textos-main">
          <h2 class="titulo left">¿Quienes Somos?</h2>
@@ -88,15 +98,12 @@ No hace falta insultar.
        </div>
        </section>
        <footer id="contacto">
-        <h2 class="titulo">Contacto de Nosotros</h2>
-        <form action class="form">
-            <input class="input" type="text" name id placeholder="Nombre">
-            <input class="input" type="email" name id placeholder="Email">
-            <textarea class="input" name id cols="30" rows="10" placeholder="Mensaje"></textarea>
-            <input class="input" type="submit" value="Enviar">
-
-       </form>
-       </div>
+        <div>
+        <h2 class="titulo">Antara</h2>
+        </div>
+        <div>
+            <h3>Chats</h3> 
+        </div>
       </footer>
 
       <script src="https://kit.fontawesome.com/c15b744a04.js" crossorigin="anonymous"></script>
