--- a/public/scss/landing/landing.scss
+++ b/public/scss/landing/landing.scss
@@ -3,17 +3,49 @@
     padding: 0;
     box-sizing: border-box;
 }
-/* 
+
 html{
     scroll-behavior: smooth;
 }
 
-body{
-    font-family: 'Raleway', sans-serif;
-} */
+.nav_landing{
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    margin: 0.5rem 1.3rem;
+    align-items: center;
+
+    .antara_nav{
+        font-size: 2.5rem;
+    }
+    
+    .acciones_nav{        
+    font-family: var(--bs-body-font-family);
+        .login_nav{
+            font-family: var(--bs-body-font-family);
+            font-size: 1rem;
+            border-radius: 30px;
+            text-decoration: none;
+            color: #fff
+        }
+        .registro_nav{
+            font-family: var(--bs-body-font-family);
+            margin-left: 15px;
+            align-items: center;
+            font-size: 1.2rem;
+            border-radius: 8px;
+            padding: 5px 15px;
+            background-color: #110f1386;
+            text-decoration: none;
+            color: #fff
+        }
+
+    }
+}
 
 .hero{
-    background-image: linear-gradient(120deg, #ffb009 0%, #7c4cc3 100%), url("../img/header.jpg");
+    background: rgb(253,245,207);
+    background: radial-gradient(circle, rgba(253,245,207,1) 0%, rgba(156,114,216,1) 100%);
     width: 100%;
     height: 650px;
     background-repeat: no-repeat;
@@ -26,7 +58,7 @@ body{
 
 .textos-hero{
     height: 500px;
-    color: #fff;
+    color: #2a1554;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -34,7 +66,7 @@ body{
 
     .Antara{
         display: flex;
-
+        
         i{
             font-size: 1.5rem;
         }
@@ -42,6 +74,7 @@ body{
 }
 .textos-hero h1{
     font-size: 60px;
+    font-weight: 700;
 }
 
 .textos-hero p{
@@ -58,11 +91,15 @@ body{
     color: #fff;
 }
 
-.svg-hero{
+.imagengatito{
     position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
+    top: 160px;
+    left: 620px;
+    width: 78%;
+
+    img{
+        width: 78%;
+    }
 }
 /* Estilos generales */
 
@@ -72,7 +109,7 @@ body{
     max-width: 1000px;
     overflow: hidden;
     margin: auto;
-    padding: 0 0 80px 0;
+    padding: 0 0 50px 0;
 }
 .contenedor{
     padding: 80px 0;
@@ -87,6 +124,8 @@ body{
 
 .titulo.left{
     text-align: left;
+    margin-top: 50px;
+
 }
 
 .titulo.right{
