--- a/public/scss/login/login.scss
+++ b/public/scss/login/login.scss
@@ -1,39 +1,3 @@
-/* body, html {
-    height: 100%;
-    font-family: Poppins-Regular,sans-serif;
-}
-body {
-    margin: 0;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
-    background-color: #fff;
-}
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-*, ::after, ::before {
-    box-sizing: inherit;
-}
-body{
-    display: block;
-    margin: 8px;
-}
-html {
-    box-sizing: border-box;
-    font-family: sans-serif;
-    line-height: 1.15;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-    
-    -webkit-tap-highlight-color: transparent;
-}
- */
-
 .limiter {
     width: 100%;
     margin: 0 auto;
@@ -222,7 +186,7 @@ a {
     height: 100%;
 
     /*background: #a64bf4;*/
-    background-image: linear-gradient(120deg, #ffb009 0%, #7c4cc3 70%), url("../img/header.jpg");
+    background-image: linear-gradient(120deg,rgba(253,245,207,1) 15%, rgba(156,114,216,1) 60%) ;
     top: 0%;
     left: -100%;
     -webkit-transition: all .4s;
