--- a/public/scss/registro/registro.scss
+++ b/public/scss/registro/registro.scss
@@ -1,26 +1,25 @@
 @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,500&display=swap');
 
-/* * {
-	box-sizing: border-box;
-}
 
-body {
-	background-color: #fff;
+.registro_todo{
+	background-image: linear-gradient(120deg,rgba(253,245,207,1) 15%, rgba(156,114,216,1) 60%) ;
 	font-family: 'Open Sans', sans-serif;
+	display: flex;
 	align-items: center;
 	justify-content: center;
 	min-height: 100vh;
 	margin: 0;
-} */
+}
 
 .container {
-	background-color: #fff;
+	background-color: rgb(255, 250, 255);
 	border-radius: 5px;
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 	overflow: hidden;
 	width: 400px;
 	max-width: 100%;
+	box-sizing: border-box;
 }
 
 .header {
@@ -31,6 +30,7 @@ body {
 
 .header h2 {
 	margin: 0;
+	font-weight: 800;
 }
 
 .form {
@@ -49,7 +49,7 @@ body {
 }
 
 .form-control input {
-	border: 2px solid #f0f0f0;
+	border: 2px solid #fffcfc;
 	border-radius: 4px;
 	display: block;
 	font-family: inherit;
@@ -67,8 +67,9 @@ body {
 }
 
 .form button {
-	background-color: #8e44ad;
-	border: 2px solid #8e44ad;
+	background-color:var(--image-bg);
+	background-color: #674da3;
+	border: 2px solid ;
 	border-radius: 4px;
 	color: #fff;
 	display: block;
@@ -77,4 +78,42 @@ body {
 	padding: 10px;
 	margin-top: 20px;
 	width: 100%;
+}
+
+.form button:active {
+	background-color: #37295a;
+}
+
+.sociales{
+	width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    cursor: pointer;
+}
+.sociales-materia {
+	width: 12.5rem;
+    height: 3.75rem;
+    font-size: 1.2rem;
+    font-weight: 700;
+    letter-spacing: 0.5px;
+    border-radius: 5px;
+    border: 1px solid var(--button-bg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.sociales-materia img{
+	width: 1.875rem;
+    height: 1.875rem;
+    position: relative;
+    top: 0;
+    left: -0.625rem;
+}
+.sociales-materia:hover{
+	background-color: rgb(143, 104, 175);
+	transition: 0.3s ease-in
+}
+
+.sociales_p{	
+	margin: 1rem 0;
 }
