--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,7 +1,7 @@
 <header class="hero">
     <nav>
         <div class="nav_landing">
-            <div style="display:flex;">
+            <div style="display:flex;align-items: baseline;">
             <h1 class="antara_nav">Antara</h1>
             <p>Lorem ipsum dolor sit amet.</p>
             </div>
@@ -11,57 +11,63 @@
         </div>
         </div>
     </nav>
+
     <div class="textos-hero">
-            <span class="Antara"><h1>Antara chat</h1><i class='bx bxs-message-rounded-dots'></i></span>
-            <p>La red de chat para contactar personas</p>
-            <a href="/register">Registrate</a>
+        <span class="Antara"><h1>Antara chat</h1><i class='bx bxs-message-rounded-dots'></i></span>
+        <p>La red de chat para contactar personas</p>
+        <a href="/register">Registrate</a>
     </div>
     <div class="imagengatito">
-        <img src="/img/kyaaa (2).png" alt="">
+        <img src="/img/kitty_1_CC.png" alt="">
     </div>
 </header>
+
 <section class="wave-contenedor website">
-            <img src="img/primer.jpg" alt="">
+        <img src="img/primer.jpg" alt="">
         <div class="contenedor-textos-main">
-         <h2 class="titulo left">¿Quienes Somos?</h2>
-         <p class="parrafo">
-          "Somos una red de chat para generar mas contactos , es un ambiente tranquilo con la facilidad de adaptarce a cada etapa de tu vida"
-         </p>
-         <a href class="cta">Información</a>
+            <h2 class="titulo left">¿Quienes Somos?</h2>
+            <p class="parrafo">
+                "Somos una red de chat para generar mas contactos , es un ambiente tranquilo con la facilidad de adaptarce a cada etapa de tu vida"
+            </p>
+            <a href class="cta">Información</a>
         </div>
-        </section>
-    <section class="info">
+</section>
+
+<section class="info">
         <div class="contenedor">
-         <h2 class="titulo left">Unidos todos en una sola RED</h2>
-         <p class="parrafo">
-            "Este es un chat para generar unión y hacercarse más atraves de la comunicación , con respeto y responsabilidad"</p>
-       </div>
-      </section>
-      <section class="cards contenedor">
+            <h2 class="titulo_info">Unidos todos en una sola RED</h2>
+            <p class="parrafo">
+                Este es un chat para generar unión y acercarse más a través de la comunicación, el respeto y responsabilidad.
+            </p>
+        </div>
+</section>
+
+<section class="cards contenedor">
         <h2 class="titulo">Temas a charlar</h2> 
         <div class="content-cards">
-        <article class="card">
-            <i class="far fa-clone" aria-hidden="true"></i>
-            <h3>Miedos</h3>
-            <p>Sensación de angustia provocada por la presencia de un peligro real o imaginario.</p>
-            <a href class="cta">Mas info</a>
-        </article>
-        <article class="card">
-            <i class="far fa-clone" aria-hidden="true"></i>
-            <h3>Planes a futuro</h3>
-            <p> El Plan de Futuro es una guía de acción para lo que queremos.</p>
-            <a href class="cta">Mas info</a>
-        </article>
-        <article class="card">
-            <i class="far fa-clone" aria-hidden="true"></i>
-            <h3>Anecdotas</h3>
-            <p>
-                Relato breve de un acontecimiento extraño, curioso o divertido.</p>
-            <a href class="cta">Mas info</a>
-        </article>
+            <article class="card">
+                <i class="far fa-clone" aria-hidden="true"></i>
+                <h3>Miedos</h3>
+                <p>Sensación de angustia provocada por la presencia de un peligro real o imaginario.</p>
+                <a href class="cta">Mas info</a>
+            </article>
+            <article class="card">
+                <i class="far fa-clone" aria-hidden="true"></i>
+                <h3>Planes a futuro</h3>
+                <p> El Plan de Futuro es una guía de acción para lo que queremos.</p>
+                <a href class="cta">Mas info</a>
+            </article>
+            <article class="card">
+                <i class="far fa-clone" aria-hidden="true"></i>
+                <h3>Anecdotas</h3>
+                <p>
+                    Relato breve de un acontecimiento extraño, curioso o divertido.</p>
+                <a href class="cta">Mas info</a>
+            </article>
         </div>
-       </section>
-       <select class="galeria">
+</section>
+
+{{!-- <select class="galeria">
         <div class="contenedor">
             <h2 class="titulo">Y Mucho mas</h2>
             <article class="galeria-cont">
@@ -73,44 +79,57 @@
                 <img src="img/septimo.jpg" alt="">
             </article>
             </div>
-           </select>
-           <section class="info-lat">
-            <div class="contenedor last-section">
-            <div class="contenedor-text-main">
-                <h2 class="titulo left">Reglamento</h2>
-                <p class="parrafo">
-                    Leer antes de escribir. 
-No hay límite de palabras por envío.
-Un emoticono vale más que mil millones.
-Respetar los horarios.
-No a los bulos. 
-No a los virales caducados.
-No hace falta insultar.
-                </p>
+</select> --}}
+
+<section class="info-lat">
+    <div class="contenedor last-section">
+        <div class="contenedor-text-main">
+            <h2 class="titulo left">Reglamento</h2>
+            <p class="parrafo">
+                Leer antes de escribir. 
+                No hay límite de palabras por envío.
+                Un emoticono vale más que mil millones.
+                Respetar los horarios.
+                No a los bulos. 
+                No a los virales caducados.
+                No hace falta insultar.
+            </p>
             <a href="cta">Mas info</a>
-           </div>
-           <img src="img/verguenza.jpg" alt>
-          </div>
-          <div class="svg-wave" style="height: 150px; overflow:hidden;">
-         <svg viewBox= "0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
-         <path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #f5576c;"></path>
+        </div>
+        <img src="img/verguenza.jpg" alt>
+    </div>
+    <div class="svg-wave" style="height: 150px; overflow:hidden;">
+        <svg viewBox= "0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
+            <path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #110f13;"></path>
         </svg>
-       </div>
-       </section>
-       <footer id="contacto">
+    </div>
+</section>
+
+<footer id="footer">
         <div>
-        <h2 class="titulo">Antara</h2>
+            <h2 class="titulo_footer">Antara</h2>
         </div>
         <div>
             <h3>Chats</h3> 
+            <span class="chats_footer">
+            <a href="">#Chat general</a>
+            <a href="">#Chat general</a>
+            <a href="">#Chat general</a>
+            <a href="">#Chat general</a>
+            </span>
         </div>
-      </footer>
+        <div>
+            <h3>Chats</h3> 
+            <span class="chats_footer">
+            <a href="">#Chat general</a>
+            <a href="">#Chat general</a>
+            <a href="">#Chat general</a>
+            <a href="">#Chat general</a>
+            </span>
+        </div>
+</footer>
 
-      <script src="https://kit.fontawesome.com/c15b744a04.js" crossorigin="anonymous"></script>
-      <style media="all" id="fa-v4-font-face">
-     </style>
-     <style media="all" id="fa-v4-shims">
-     </style>
-     <style media="all" id="fa-main">
-        
-     </style>
+<script src="https://kit.fontawesome.com/c15b744a04.js" crossorigin="anonymous"></script>
+<style media="all" id="fa-v4-font-face"></style>
+<style media="all" id="fa-v4-shims"></style>
+<style media="all" id="fa-main"></style>
