--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,34 +1,46 @@
-<div class="container_registro">
-        <div class="header">
-            <h2>Crear cuenta</h2>
-        </div>
-        <form id="formuser" class="form">
-            <div class="form-control">
-                <label for="username">Usuario</label>
-                <input type="text" placeholder="Nombre de Usuario" id="username" />
-                <i class="fas fa-check-circle"></i>
-                <i class="fas fa-exclamation-circle"></i>
-                <small>Error</small>
+<div class="registro_todo">
+    <div class="container registro">
+            <div class="header">
+                <h2>Crear cuenta</h2>
             </div>
-            <div class="form-control">
-                <label for="email">Email</label>
-                <input type="email" id="signup-email" class="form-control"
-                placeholder="Email" required />
-                <i class="fas fa-check-circle"></i>
-                <i class="fas fa-exclamation-circle"></i>
-                <small>Error de mensaje</small>
-            </div>
-            <div class="form-control">
-                <label for="password">Contraseña</label>
-                <input  type="password" id="signup-pass" class="form-control"
-                placeholder="Password" required/>
-                <i class="fas fa-check-circle"></i>
-                <i class="fas fa-exclamation-circle"></i>
-                <small>Error </small>
-            </div>
-            <button type="submit">Enviar</button>
-        </form>
-</div>
+            <form id="formuser" class="form">
+                <div class="form-control">
+                    <label for="username">Usuario</label>
+                    <input type="text" placeholder="Nombre de Usuario" id="username" />
+                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-exclamation-circle"></i>
+                    <small>Error</small>
+                </div>
+                <div class="form-control">
+                    <label for="email">Email</label>
+                    <input type="email" id="signup-email" class="form-control"
+                    placeholder="Email" required />
+                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-exclamation-circle"></i>
+                    <small>Error de mensaje</small>
+                </div>
+                <div class="form-control">
+                    <label for="password">Contraseña</label>
+                    <input  type="password" id="signup-pass" class="form-control"
+                    placeholder="Password" required/>
+                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-exclamation-circle"></i>
+                    <small>Error </small>
+                </div>
+                <button type="submit">Enviar</button>
+                <p class="sociales_p">O también por: </p>
+                <div class="sociales">
+                    <div class="sociales-materia">
+                        <img src="img/google.svg" alt="">
+                        <span>Google</span>
+                    </div>
+                    <div class="sociales-materia">
+                    <img src="img/face.svg" alt="">
+                    <span>Facebook</span>
+                    </div>
+            </form>
+    </div>
+</div>    
     <!--toastify JS-->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <!--doc js-->
