--- a/public/scss/landing/landing.scss
+++ b/public/scss/landing/landing.scss
@@ -8,6 +8,28 @@ html{
     scroll-behavior: smooth;
 }
 
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #2c1454 #2c1454;
+}
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 14px;
+}
+
+  *::-webkit-scrollbar-track {
+    display: none;
+    background-color: transparent; }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #2c1454;
+    border-radius: 10px;
+    border: 3px solid #2c1454;
+}
+
 .nav_landing{
     color: #fff;
     display: flex;
@@ -25,6 +47,7 @@ html{
     
     .acciones_nav{        
     font-family: var(--bs-body-font-family);
+
         .login_nav{
             font-family: var(--bs-body-font-family);
             font-size: 1rem;
@@ -49,7 +72,7 @@ html{
 
 .hero{
     background: rgb(253,245,207);
-    background: radial-gradient(circle, rgba(253,245,207,1) 0%, rgba(156,114,216,1) 100%);
+    background: radial-gradient(circle, #fdf5cf 0%, #eeaeca 25%, #9c72d8 100%);
     width: 100%;
     height: 650px;
     background-repeat: no-repeat;
@@ -93,16 +116,17 @@ html{
     background: #a18cd1;
     border-radius: 8px;
     color: #fff;
+    font-family: var(--bs-body-font-family);
 }
 
 .imagengatito{
     position: absolute;
     top: 160px;
-    left: 620px;
+    left: 650px;
     width: 78%;
 
     img{
-        width: 78%;
+        width: 74%;
     }
 }
 /* Estilos generales */
@@ -124,6 +148,14 @@ html{
     font-size: 35px;
     text-align: center;
     margin-bottom: 30px;
+}
+
+.titulo_reglamento{
+    font-weight: 300;
+    font-size: 35px;
+    text-align: center;
+    margin-bottom: 30px;
+    text-align: left;
 }
 
 .titulo.left{
@@ -156,10 +188,11 @@ html{
 .cta{
     display: inline-block;
     text-decoration: none;
-    background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
+    background-image: linear-gradient(45deg, rgba(156,114,216,1) 0%, #eeaeca 99%, rgba(253,245,207,1) 100%);
     padding: 12px 15px;
     border-radius: 8px;
     color: #fff;
+    font-family: var(--bs-body-font-family);
 }
 
 .info{
@@ -233,7 +266,7 @@ html{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding-bottom: 40px;
+    padding-bottom: 80px;
 }
 
 .last-section img{
